# symmscreen

./: .gitignore  LICENSE  README.md  pyproject.toml  symmscreen_examples.ipynb
.github/workflows/: publish.yml  tests.yml
src/symmscreen/: __init__.py  _clean.py  _wigner.py  cif.py  lattice.py  point_groups.py  projectors.py  screening.py  shape.py  survival.py
tests/: conftest.py  test_projectors.py  test_regression_reference_values.py  test_shape.py  test_survival.py  test_wigner.py
